@@ -1,3 +1,4 @@
 usr/lib/python2.3/site-packages/pokernetwork
 usr/lib/python2.3/site-packages/pokerui
+usr/share/poker-network/schema.sql
 etc
