@@ -402,6 +402,9 @@ int	handle_tournaments(GladeXML* g_tournaments_xml, GladeXML* g_tournament_info_
       } else {
         gtk_notebook_set_current_page(s_notebook, PAGE_REGULAR);
       }
+      GtkToggleButton* button = gui_get_widget(g_lobby_tabs_xml, type);
+      g_assert(button);
+      gtk_toggle_button_set_active(button, TRUE);
       g_free(type);
     }
 
